# RT-HCNN

./: CMakeLists.txt  README.md
include/: Blind.h  img.h
para/: c1_bias.txt  c1_weight.txt  c2_bias.txt  c2_weight.txt  c3_bias.txt  c3_weight.txt  f5_bias.txt  f5_weight.txt
src/: main.cu  main1.cu
